--- a/templates/weather.html
+++ b/templates/weather.html
@@ -111,9 +111,9 @@
       <table>
         <thead>
           <tr>
-            <th>日期</th>
-            <th>星期</th>
-            <th>天氣</th>
+            <th>Date</th>
+            <th>Weekday</th>
+            <th>Weather</th>
           </tr>
         </thead>
         <tbody id="weather-table-body">
